--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "haversine": "^1.1.1",
     "link": "^0.1.5",
     "lottie-react-native": "^4.0.2",
     "moment": "^2.29.1",
